# Supply-Chain-Exception-Triage

./: .env.template  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  firebase.json  main.py  pyproject.toml  pytest.toml  session-669bc958-cd7a-4307-93bb-0cdc9f00d52a.json  session-b6245a99-40c8-475f-b7bc-881a8a38683f.json
.claude/: settings.json
.claude/hooks/: check_file_size.py  check_placement.py
.claude/rules/: agents.md  api-routes.md  architecture-layers.md  code-quality.md  deployment.md  evalsets.md  firestore.md  guardrails.md  imports.md  logging.md  models.md  new-feature-checklist.md  observability.md  placement.md  prompts.md  security.md  testing.md  tools.md
.github/workflows/: ci.yml  ci.yml.disabled  security.yml
docs/: product_recap.md
docs/decisions/: adr-001-framework-choice.md  adr-002-memory-layer.md  adr-003-prompt-format.md  adr-004-streaming-strategy.md  adr-005-testing-strategy.md  adr-006-sdlc-choice.md  adr-007-ui-strategy.md  adr-008-a2a-protocol.md  adr-009-coordinator-pattern.md
docs/research/: 2026-04-19-triage-pipeline-audit.md  Architecture-Decision-Analysis-summary.md  Supply-Chain-Agent-Spec-Classifier.md  Supply-Chain-Agent-Spec-Coordinator.md  Supply-Chain-Agent-Spec-Impact.md  Supply-Chain-Firestore-Schema-Tier1.md  Supply-Chain-Sprint-Plan-Spiral-SDLC.md  adk-best-practices.md  codebase-cleanup-research.md  coordinator-orchestration-patterns.md  fastapi-sse-api-design.md  firebase-auth-oauth-multitenancy.md  firestore-utilization-audit-tier1.md  gcp-proper-utilization.md  gemini-structured-output-gotchas.md  llm-quotas-rate-limits.md  observability-otel-cloud-trace.md  sprint1-classifier-research.md  sprint2-impact-prd.md  zettel-adk-before-model-callback.md  zettel-fastapi-sse-cloud-run.md  zettel-firestore-multi-tenant.md  zettel-supermemory-python-sdk.md  zettel-vault-coordinator-inconsistency.md
docs/security/: owasp-checklist.md  threat-model.md
docs/sessions/: 2026-04-14-session-log.md  2026-04-14-sprint-0-complete.md  2026-04-14-structure-and-rules.md  2026-04-16-codebase-cleanup.md  2026-04-16-infra-fixes-logging.md  2026-04-16-sprint1-classifier.md  2026-04-16-sprint2-impact-agent.md  2026-04-18-research-session-decisions.md  2026-04-19-premise-grilling-prep.md  2026-04-19-premise-grilling-result.md  2026-04-19-sprint3-day2-pipeline-callbacks.md  2026-04-20-sprint3-day4-sse-handoff.md  2026-04-20-sprint3-day4-sse.md  next-sprint-handoff-v2.md  next-sprint-handoff.md
docs/sprints/sprint-0/: impl-log.md  prd-v1-archived.md  prd.md  retro.md  review.md  risks.md  security.md  test-plan.md  test-report.md
docs/sprints/sprint-1/: prd.md  risks.md  test-plan.md
docs/sprints/sprint-2/: prd.md  risks.md  test-plan.md
docs/sprints/sprint-3/: impl-log.md  prd-v1-archived.md  prd.md  retro.md  review.md  risks-v1-archived.md  risks.md  security.md  test-plan.md  test-report.md
docs/sprints/sprint-4/: prd.md  risks.md  test-plan.md
docs/sprints/sprint-5/: prd.md  risks.md  test-plan.md
docs/sprints/sprint-6/: prd.md  risks.md  test-plan.md
docs/templates/: adr-template.md  prd-template.md  retrospective-template.md  sprint-layout-template.md  test-plan-template.md
evals/hello_world/: greeting.evalset.json
evals/session/: impact.json  impactv2.json  session-4266f494-710e-4f7a-b0fa-5166497b7e8c.json  session-49dd3280-b8fe-4586-8123-d9948fc18f18.json  session-761a672f-dc5e-48e4-829d-1703cbb3000d.json  session-d9eb97e1-ec00-43ba-9b68-0d67144ed6ac.json
evals/triage_pipeline/: eval_config.json  triage_pipeline_v1.evalset.json
infra/: firestore.indexes.json  firestore.rules
scripts/: _investigate_seed.py  deploy.sh  gcp_bootstrap.sh  seed_classifier_demo.py  seed_emulator.py  seed_firestore.py  seed_impact_demo.py  set_custom_claims.py  setup.sh
scripts/seed/: companies_nimblefreight.json  companies_swiftlogix.json  customers.json  exceptions.json  hubs.json  routes.json  shipments.json
src/supply_chain_triage/: main.py
src/supply_chain_triage/core/: config.py  llm.py
src/supply_chain_triage/middleware/: audit_log.py  cors.py  firebase_auth.py  input_sanitization.py  rate_limit.py
src/supply_chain_triage/modules/triage/agents/classifier/: __init__.py  agent.py  schemas.py  tools.py
src/supply_chain_triage/modules/triage/memory/: provider.py  supermemory_adapter.py
src/supply_chain_triage/modules/triage/models/: __init__.py  api_envelopes.py  classification.py  common_types.py  company_profile.py  exception_event.py  financial.py  impact.py  learned_preferences.py  route.py  shared_models.py  triage_result.py  user_context.py
src/supply_chain_triage/modules/triage/pipeline/: __init__.py  _constants.py  callbacks.py  hydration.py
src/supply_chain_triage/modules/triage/tools/: lookup.py
src/supply_chain_triage/runners/: _shared.py  agent_runner.py  classifier_runner.py  impact_runner.py  triage_runner.py
src/supply_chain_triage/runners/routes/: __init__.py  triage.py
src/supply_chain_triage/utils/: logging.py
tests/: conftest.py
tests/fixtures/: fake_firestore.py  fake_gemini.py  fake_supermemory.py
tests/integration/: test_triage_pipeline.py  test_triage_sse.py
tests/integration/firestore/: test_emulator_roundtrip.py
tests/unit/agents/: test_hello_world.py
tests/unit/config/: test_config.py
tests/unit/core/: test_llm.py
tests/unit/memory/: test_provider.py
tests/unit/middleware/: test_audit_log.py  test_cors.py  test_firebase_auth.py  test_input_sanitization.py  test_rate_limit.py
tests/unit/modules/triage/models/: test_financial.py  test_impact.py  test_route.py
tests/unit/modules/triage/pipeline/: test_callbacks.py  test_hydration.py  test_pipeline_factory.py
tests/unit/modules/triage/tools/: test_lookup.py
tests/unit/runners/: test_main.py  test_triage_runner.py
tests/unit/schemas/: test_classification.py  test_company_profile.py  test_exception_event.py  test_impact.py  test_triage_result.py  test_user_context.py
tests/unit/utils/: test_logging.py
(+18 files in other folders)
