[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "supply-chain-triage"
version = "0.1.0"
description = "AI-powered exception triage for small 3PLs in India (ADK + Gemini + Firebase)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13,<3.14"
authors = [
  { name = "Krrish", email = "noreply@example.com" },
]
keywords = ["adk", "gemini", "supply-chain", "agents", "firebase"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3.13",
  "Framework :: FastAPI",
  "License :: OSI Approved :: MIT License",
]

dependencies = [
  # --- Agent framework ---
  "google-adk>=1.0.0",                 # Pin to exact version once verified
  "google-generativeai>=0.8.0",
  "google-cloud-secret-manager>=2.20.0",

  # --- Web framework ---
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",

  # --- Auth ---
  "firebase-admin>=6.5.0",             # Resolved Decision #4

  # --- Data layer ---
  "google-cloud-firestore>=2.18.0",

  # --- Validation ---
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",

  # --- Utilities ---
  "python-dotenv>=1.0.1",
  "structlog>=24.4.0",                 # Structured JSON logging
  "httpx>=0.27.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7.3.2",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "httpx>=0.27.0",                     # Required by TestClient
]

dev = [
  "ruff>=0.8.0",                       # Replaces black+flake8+isort+pyupgrade
  "mypy>=1.13.0",
  "pre-commit>=4.0.0",
  "types-requests",
]

security = [
  "bandit>=1.7.10",
  "safety>=3.2.0",
  "pip-audit>=2.7.0",
  "detect-secrets>=1.5.0",
]

docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
]

[project.scripts]
supply-chain-triage = "supply_chain_triage.main:cli"

# --- uv config ---
[dependency-groups]
dev = [
  "supply-chain-triage[test,dev,security]",
]

# --- ruff ---
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pycodestyle + pyflakes
  "I",             # isort
  "B",             # bugbear
  "UP",            # pyupgrade
  "SIM",           # simplify
  "S",             # bandit-lite
  "C90",           # mccabe complexity
  # --- extensions for ADK/FastAPI discipline ---
  "ASYNC",         # async antipatterns (critical for ADK event loop)
  "RUF",           # ruff-specific
  "PT",            # pytest style
  "TID",           # tidy-imports (enables banned-api below)
  "PL",            # pylint subset
  "N",             # pep8-naming
  "ARG",           # unused args
  "PTH",           # pathlib over os.path
  "TCH",           # TYPE_CHECKING guards
  "ERA",           # commented-out code
]
ignore = [
  "S101",          # Allow `assert` in tests
]

# Import bans — encode the rules in .claude/rules/imports.md as lint errors.
# Modules listed here are forbidden project-wide except where explicitly
# waived via per-file-ignores below.
[tool.ruff.lint.flake8-tidy-imports.banned-api]
"google.adk".msg = "google.adk only in modules/*/agents/*/agent.py, runners/, modules/*/memory/. See .claude/rules/imports.md"
"firebase_admin".msg = "firebase_admin only in modules/*/memory/, modules/*/tools/, middleware/. See .claude/rules/imports.md"
"google.cloud.firestore".msg = "google.cloud.firestore only in modules/*/memory/, modules/*/tools/, middleware/. See .claude/rules/imports.md"

[tool.ruff.lint.per-file-ignores]
# Agents, runners, memory, tools, middleware — allowed to import the banned APIs.
"src/supply_chain_triage/modules/*/agents/**/agent.py" = ["TID251"]
"src/supply_chain_triage/runners/**" = ["TID251"]
"src/supply_chain_triage/**/memory/**" = ["TID251"]
"src/supply_chain_triage/**/tools/**" = ["TID251"]
"src/supply_chain_triage/middleware/**" = ["TID251"]
# Tests — assert, fake creds, magic values, unused args, banned imports (for mocking).
"tests/**" = ["S101", "S105", "S106", "PLR2004", "ARG", "TID251"]
# Evalsets — assert allowed.
"evals/**" = ["S101"]
# __init__ — re-exports.
"**/__init__.py" = ["E402", "F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- mypy ---
[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
# NOTE: do NOT set `ignore_missing_imports = true` globally — it conflicts
# with `strict = true` (which enables `warn_unused_ignores`). Instead,
# scope `ignore_missing_imports` per-module below.

[[tool.mypy.overrides]]
module = ["google.adk.*", "firebase_admin.*", "mockfirestore.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# --- pytest ---
[tool.pytest.ini]
minversion = "7.3.2"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--cov=src/supply_chain_triage",
  "--cov-report=term-missing",
  "--cov-report=xml",
  # Coverage is advisory through Tier 1 (Apr 24). Harden to a real threshold
  # (e.g. --cov-fail-under=90 on pure-logic) starting Tier 2.
]
markers = [
  "integration: marks tests requiring external services (emulator, Gemini)",
  "slow: slow tests (>2s)",
]

# --- coverage ---
# Scoped to pure-logic paths. Agents are validated by evalsets, not coverage.
# Advisory through Tier 1 (2026-04-24); flip to --cov-fail-under=90 at Tier 2.
[tool.coverage.run]
branch = true
source = [
  "src/supply_chain_triage/core",
  "src/supply_chain_triage/utils",
  "src/supply_chain_triage/middleware",
  "src/supply_chain_triage/modules/triage/models",
  "src/supply_chain_triage/modules/triage/tools",
  "src/supply_chain_triage/modules/triage/guardrails",
  "src/supply_chain_triage/modules/triage/memory",
]
omit = [
  "*/main.py",
  "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]

# --- bandit ---
[tool.bandit]
exclude_dirs = ["tests", ".venv", ".git"]
skips = ["B101"]                       # Allow assert