[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "supply-chain-triage"
version = "0.1.0"
description = "AI-powered exception triage for small 3PLs in India (ADK + Gemini + Firebase)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13,<3.14"
authors = [
  { name = "Krrish", email = "777krrish@gmail.com" },
]
keywords = ["adk", "gemini", "supply-chain", "agents", "firebase"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3.13",
  "Framework :: FastAPI",
  "License :: OSI Approved :: MIT License",
]

dependencies = [
  # --- Agent framework ---
  "google-adk>=1.0.0",                 # Pin to exact version once verified
  "google-generativeai>=0.8.0",
  "google-cloud-secret-manager>=2.20.0",

  # --- Web framework ---
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",

  # --- Auth ---
  "firebase-admin>=6.5.0",             # Resolved Decision #4

  # --- Data layer ---
  "google-cloud-firestore>=2.18.0",

  # --- Validation ---
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",

  # --- Utilities ---
  "python-dotenv>=1.0.1",
  "structlog>=24.4.0",                 # Structured JSON logging
  "rich>=13.9.0",                      # Dev-console handler + rich tracebacks (utils/logging.py)
  "httpx>=0.27.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7.3.2",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "httpx>=0.27.0",                     # Required by TestClient
  # --- three-pillar additions ---
  "respx>=0.21",                       # Async httpx mocking for external HTTP calls
  "pytest-recording>=0.13",            # VCR cassettes for rare pytest Gemini smoke tests
]

dev = [
  "ruff>=0.8.0",                       # Replaces black+flake8+isort+pyupgrade
  "mypy>=1.13.0",
  "pre-commit>=4.0.0",
  "types-requests",
  # --- Path B enforcement (layer + docstring coverage) ---
  "import-linter>=2.0",                # Layer + forbidden-import contracts in pyproject.toml
  "interrogate>=1.7",                  # Docstring coverage gate on boundary folders
]

security = [
  "bandit>=1.7.10",
  "safety>=3.2.0",
  "pip-audit>=2.7.0",
  "detect-secrets>=1.5.0",
]

docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
]

[project.scripts]
supply-chain-triage = "supply_chain_triage.main:cli"

# --- uv config ---
[dependency-groups]
dev = [
  "supply-chain-triage[test,dev,security]",
]

# --- ruff ---
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
ignore = [
  "E501",    # line length handled by ruff-format, not as a hard error
  "PLC0415", # lazy imports are intentional in config.py and main.py
]
select = [
  "E", "F", "W",   # pycodestyle + pyflakes
  "I",             # isort
  "B",             # bugbear
  "UP",            # pyupgrade
  "SIM",           # simplify
  "S",             # bandit-lite
  "C90",           # mccabe complexity
  # --- extensions for ADK/FastAPI discipline ---
  "ASYNC",         # async antipatterns (critical for ADK event loop)
  "RUF",           # ruff-specific
  "PT",            # pytest style
  "TID",           # tidy-imports (enables banned-api below)
  "PL",            # pylint subset (thresholds in [tool.ruff.lint.pylint])
  "N",             # pep8-naming
  "ARG",           # unused args
  "PTH",           # pathlib over os.path
  "TCH",           # TYPE_CHECKING guards
  "ERA",           # commented-out code
  "D",             # pydocstyle — scoped via per-file-ignores below
  "DTZ",           # flake8-datetimez — bans datetime.utcnow() and naive datetimes
  "T20",           # flake8-print — bans print() / pprint() outside scripts (use utils/logging.get_logger)
]

# Google-convention docstrings (matches adk-samples style).
# This auto-resolves D203/D211 and D212/D213 conflicts.
[tool.ruff.lint.pydocstyle]
convention = "google"

# Research-default thresholds for function-shape rules (PLR09**).
# Encodes the "no god functions" rule from .claude/rules/code-quality.md.
[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-statements = 50
max-returns = 6
max-locals = 15

# Import bans — encode the rules in .claude/rules/imports.md as lint errors.
# Modules listed here are forbidden project-wide except where explicitly
# waived via per-file-ignores below.
[tool.ruff.lint.flake8-tidy-imports.banned-api]
"google.adk".msg = "google.adk only in modules/*/agents/*/agent.py, runners/, modules/*/memory/. See .claude/rules/imports.md"
"firebase_admin".msg = "firebase_admin only in modules/*/memory/, modules/*/tools/, middleware/. See .claude/rules/imports.md"
"google.cloud.firestore".msg = "google.cloud.firestore only in modules/*/memory/, modules/*/tools/, middleware/. See .claude/rules/imports.md"
# Firebase owns password hashing — custom hashing is forbidden project-wide.
"bcrypt".msg = "Firebase Auth handles password hashing. Do not introduce custom hashing. See .claude/rules/security.md"
"passlib".msg = "Firebase Auth handles password hashing. Do not introduce custom hashing. See .claude/rules/security.md"

[tool.ruff.lint.per-file-ignores]
# Agents, runners, memory, tools, middleware — allowed to import the banned APIs.
"src/supply_chain_triage/modules/*/agents/**/agent.py" = ["TID251"]
"src/supply_chain_triage/modules/*/agents/*/tools.py" = ["TID251"]
"src/supply_chain_triage/runners/**" = ["TID251"]
"src/supply_chain_triage/**/memory/**" = ["TID251"]
"src/supply_chain_triage/**/tools/**" = ["TID251"]
"src/supply_chain_triage/middleware/**" = ["TID251"]
# core/config.py is the DI chokepoint where framework-specific clients (Secret
# Manager, Firestore) are constructed. Everything else in core/ stays framework-
# neutral; this single file bridges. See comments in config.py.
"src/supply_chain_triage/core/config.py" = ["TID251"]
# FirebaseAuthMiddleware.dispatch has 7 well-documented error paths (missing
# creds / expired / invalid / value-error / missing-company-claim / public /
# success). Each return is clearly labelled; factoring into data tables would
# hurt readability and the test shape (6 tests × 6 branches).
"src/supply_chain_triage/middleware/firebase_auth.py" = ["PLR0911"]
# scripts/ — server-admin tooling (not request-path code). set_custom_claims.py
# uses firebase_admin to seed custom claims on test users; seed_firestore.py may
# use google.cloud.firestore in Sprint 2 for seeding. Allowed for admin-only use.
# Scripts print to stdout for operator feedback — T201/T203 allowed here only.
# See .claude/rules/imports.md §"scripts/ allowlist".
"scripts/**" = ["TID251", "T201", "T203"]
# utils/logging.py is the ONE place where structlog + rich + stdlib logging are
# configured. T201 forbidden everywhere else (forces use of get_logger).
"src/supply_chain_triage/utils/logging.py" = ["TID251"]
# Tests — assert, fake creds, magic values, unused args, banned imports (for
# mocking), no docstrings, Given/When/Then comments (ERA001), en-dashes in
# docstrings (RUF002 — we write "3.1–3.3" style test-plan references), and
# in-body imports needed for monkeypatched env reloads (PLC0415).
"tests/**" = ["S101", "S105", "S106", "PLR2004", "ARG", "TID251", "D", "ERA001", "RUF002", "PLC0415"]
# Evalsets — assert allowed, docstrings not required.
"evals/**" = ["S101", "D"]
# __init__ — re-exports, no module-level docstring required.
"**/__init__.py" = ["E402", "F401", "D"]
# Utils — internal helpers, self-documenting names; docstrings encouraged, not required.
"src/supply_chain_triage/utils/**" = ["D"]
# Schemas — pure Pydantic models; field descriptions serve the purpose.
"**/schemas.py" = ["D"]
# Core — configuration/settings; D2**/D4** style rules still apply, D1** missing-docstring silenced.
"src/supply_chain_triage/core/**" = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]
# Claude hooks — infrastructure scripts, not project code; the module docstring already explains.
".claude/**/*.py" = ["D100", "D103", "D104"]
# CLI entry-points are tiny stubs; D2**/D4** still apply.
"main.py" = ["D100", "D103"]
"src/supply_chain_triage/main.py" = ["D100", "D103"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- mypy ---
[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
# NOTE: do NOT set `ignore_missing_imports = true` globally — it conflicts
# with `strict = true` (which enables `warn_unused_ignores`). Instead,
# scope `ignore_missing_imports` per-module below.

[[tool.mypy.overrides]]
module = ["google.adk.*", "firebase_admin.*", "mockfirestore.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# --- coverage ---
# Scoped to pure-logic paths. Agents are validated by evalsets, not coverage.
# Advisory through Tier 1 (2026-04-24); flip to --cov-fail-under=90 at Tier 2.
[tool.coverage.run]
branch = true
source = [
  "src/supply_chain_triage/core",
  "src/supply_chain_triage/utils",
  "src/supply_chain_triage/middleware",
  "src/supply_chain_triage/modules/triage/models",
  "src/supply_chain_triage/modules/triage/tools",
  "src/supply_chain_triage/modules/triage/guardrails",
  "src/supply_chain_triage/modules/triage/memory",
]
omit = [
  "*/main.py",
  "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]

# --- bandit ---
[tool.bandit]
exclude_dirs = ["tests", ".venv", ".git"]
skips = ["B101"]                       # Allow assert

# --- import-linter ---
# Application-layer contracts. Documented in .claude/rules/architecture-layers.md.
# Run via `uv run lint-imports`.
[tool.importlinter]
root_package = "supply_chain_triage"

# Top-level layering: runners -> middleware -> modules -> core -> utils.
# Higher layers may import lower layers; reverse is forbidden.
[[tool.importlinter.contracts]]
name = "Top-level layering"
type = "layers"
layers = [
  "runners",
  "middleware",
  "modules",
  "core",
  "utils",
]
containers = ["supply_chain_triage"]

# Agents call tools, never Firestore/memory directly.
[[tool.importlinter.contracts]]
name = "Agents do not import memory directly"
type = "forbidden"
source_modules = ["supply_chain_triage.modules.*.agents"]
forbidden_modules = ["supply_chain_triage.modules.*.memory"]

# Tools must not import agents (prevents cycles, keeps tools reusable).
[[tool.importlinter.contracts]]
name = "Tools do not import agents"
type = "forbidden"
source_modules = ["supply_chain_triage.modules.*.tools"]
forbidden_modules = ["supply_chain_triage.modules.*.agents"]

# Memory is terminal — it does not call back up into agents/tools/runners/middleware.
[[tool.importlinter.contracts]]
name = "Memory is terminal"
type = "forbidden"
source_modules = ["supply_chain_triage.modules.*.memory"]
forbidden_modules = [
  "supply_chain_triage.modules.*.agents",
  "supply_chain_triage.modules.*.tools",
  "supply_chain_triage.runners",
  "supply_chain_triage.middleware",
]

# Models and guardrails are pure — no upward imports.
[[tool.importlinter.contracts]]
name = "Models and guardrails are terminal"
type = "forbidden"
source_modules = [
  "supply_chain_triage.modules.*.models",
  "supply_chain_triage.modules.*.guardrails",
]
forbidden_modules = [
  "supply_chain_triage.modules.*.agents",
  "supply_chain_triage.modules.*.tools",
  "supply_chain_triage.modules.*.memory",
  "supply_chain_triage.runners",
  "supply_chain_triage.middleware",
]

# --- interrogate (docstring coverage gate) ---
# Scope is narrowed in pre-commit + CI invocations to boundary folders only.
# Docstring *style* is enforced by ruff D rules — see per-file-ignores above.
[tool.interrogate]
fail-under = 80
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-private = true
ignore-nested-functions = true
exclude = ["tests", "evals", "docs", ".venv"]
verbose = 1
